testprogs/test/ast.txt
Error: Parse error
   ╭─[testprogs/test/script.pxl:7:1]
   │
 7 │ function main()
   │ ┬  
   │ ╰── found 'f' expected whitespace, Block, or end of input
───╯
